<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kth.thesis.chara.awsensorsdashboard.MainActivity"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/info" />


    <TextView android:id="@+id/text_values2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values"
        android:layout_alignBaseline="@+id/text_valuesT2"
        android:layout_alignBottom="@+id/text_valuesT2"
        android:layout_toEndOf="@+id/text_valuesT2" />

    <TextView android:id="@+id/text_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collectAccel"
        android:layout_below="@+id/Title"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView android:id="@+id/text_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collectGyro"
        android:layout_below="@+id/text_values1"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView android:id="@+id/text_valuesT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:layout_below="@+id/text_title1"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/text_values1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values"
        android:layout_alignBaseline="@+id/text_valuesT1"
        android:layout_alignBottom="@+id/text_valuesT1"
        android:layout_toEndOf="@+id/text_valuesT1" />

    <TextView android:id="@+id/text_valuesT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:layout_below="@+id/text_title2"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/text_valuesHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collectHeart"
        android:layout_below="@+id/text_values2"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView android:id="@+id/text_valuesHTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/text_valuesHT"
        android:layout_alignParentStart="true" />
</RelativeLayout>

